<resources>
    <string name="setting_bracelet_dec">(点击此处可完成手环与手机APP的配对)</string>
    <string name="setting_bracelet">智能蓝牙手环</string>
    <string name="global_alert">提示</string>
    <string name="global_ok">确定</string>
    <string name="global_save">保存</string>
    <string name="global_cancel">取消</string>
    <string name="global_1">一</string>
    <string name="global_2">二</string>
    <string name="global_3">三</string>
    <string name="global_4">四</string>
    <string name="global_5">五</string>
    <string name="global_6">六</string>
    <string name="global_7">日</string>
    <string name="global_week">星期</string>
    <string name="MESSAGE_LOGIN_SUCCESS">登录成功</string>
    <string name="MESSAGE_LOGIN_FALSE">登录失败</string>
    <string name="MESSAGE_PASSWORD_ERROE">用户名或密码错误</string>
    <string name="MESSAGE_NOT_ACTIVITY">用户未激活,请先通过电脑激活</string>
    <string name="MESSAGE_CUSTOMER_INFO_EXCEPTION">用户信息验证失败</string>
    <string name="MESSAGE_PHONE_PASSWORD_EXCEPTION">手机号或密码不正确</string>
    <string name="MESSAGE_PHONE_ERROR">请输入正确的手机号码</string>
    <string name="MESSAGE_PHONE_ISEMPTY">账号为空</string>
    <string name="MESSAGE_PASSWORD_ISEMPTY">密码为空</string>
    <string name="MESSAGE_PASSWORD_ISTOOLEN">密码长度超过30个字符</string>
    <string name="MESSAGE_PHONE_ISTOOLEN">账号长度超过30个字符</string>
    <string name="MESSAGE_NO_PEDO_DETAIL">运动记录为空</string>
    <string name="MESSAGE_SERVER_EXCEPTION">当前网络连接错误，请退出后检查网络</string>
    <string name="MESSAGE_SERVER_EXCEPTION2">无此账号，请检查拼写</string>
    <string name="MESSAGE_SERVER_EXCEPTION3">对同一手机号码每天最多请求3次短信验证码</string>
    <string name="MESSAGE_INTERNET_NONE">当前没有网络,请查看网络设置</string>
    <string name="MESSAGE_INTERNET_ERROR">网络异常，请检查网络设置</string>
    <string name="MESSAGE_UPDATE_SUCCESS">更新成功</string>
    <string name="MESSAGE_UPDATE_FALSE">更新失败</string>
    <string name="MESSAGE_UPDATED_VERSION">当前已经是最新版本</string>
    <string name="MESSAGE_UPDATE_PWD_SUCCESS">修改成功</string>
    <string name="MESSAGE_CROP_FAILED">获取失败请重新选择</string>
    <string name="MESSAGE_AVARAR_SET_SUCCESS">头像设置完成</string>
    <string name="MESSAGE_COMFIRM_FAIL">验证失败，请重试</string>
    <string name="MESSAGE_COMFIRM_PLSINPUTCODE">请输入验证码</string>
    <string name="MESSAGE_GET_SERVERLIST_FAILED">服务器暂时无法使用，请稍后再试</string>
    <string name="MESSAGE_UPLOAD_GPS_SUCCESS">数据上传成功</string>
    <string name="MESSAGE_SYNCHRO_GPS_SUCCESS">数据同步成功</string>
    <string name="MESSAGE_SYNCHRO_GPS_FAILED">数据同步成功</string>
    <string name="MESSAGE_GPS_NODATA">您还没有数据，赶快开启运动吧！</string>
    <string name="MESSAGE_UN_SAVE_DATA">数据未保存</string>
    <string name="MESSAGE_GOAL_UPLAOD_FAILED">成就设置失败，请稍后重试</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开手指刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开手指载入更多</string>
    <string name="app_name">爱动力</string>
    <string name="login_title">登录</string>
    <string name="pedometer_title">运动</string>
    <string name="racelist_title">活动排行榜</string>
    <string name="friend_title">伙伴</string>
    <string name="message_title">消息</string>
    <string name="his_title">历史记录</string>
    <string name="brief_info">运动情况</string>
    <string name="stepnum">步数</string>
    <string name="main_setting">设置</string>
    <string name="avtivity_detials_radiobutton_left">个人成绩</string>
    <string name="avtivity_detials_radiobutton_right">团队成绩</string>
    <string name="achievement_title">成就</string>
    <string name="rank_textview_7day">七日</string>
    <string name="rank_textview_1day">昨日</string>
    <string name="text_zeronum">0</string>
    <string name="image_content_description">is OK</string>
    <string name="history_hot">卡路里(千卡)</string>
    <string name="history_uploadtime">上传时间</string>
    <string name="face_image">我的头像</string>
    <string name="nickname">昵称</string>
    <string name="telephonenumber">手机号码 :</string>
    <string name="text_login">登  录</string>
    <string name="text_remember_password">记住密码</string>
    <string name="textview_forgetpwd">忘记密码</string>
    <string name="textview_autologin">自动登录</string>
    <string name="textview_packname">文件名：SportHealth.apk</string>
    <string name="textview_daxiao">大小:</string>
    <string name="textview_rankid">序号</string>
    <string name="textview_race0">敬请期待</string>
    <string name="textivew_race3">已结束</string>
    <string name="textview_mygroup">所 属  组：</string>
    <string name="textview_runtarget">运动目标：</string>
    <string name="textview_aboutapk">关于爱动力</string>
    <string name="textview_version">当前版本：</string>
    <string name="textview_inspect_version">检查新版本</string>
    <string name="textview_binddevice">设备管理</string>
    <string name="textview_boot_run">开机启动:</string>
    <string name="textview_feedback">意见反馈</string>
    <string name="textview_input_rank_target">请输入运动目标</string>
    <string name="textview_runtarget_describe">在这里您可以设置您每天的运动目标步数(单位：步)</string>
    <string name="textview_save">保 存</string>
    <string name="textview_friend_weixin">发给微信好友</string>
    <string name="textview_circle_friend_weixin">分享到朋友圈</string>
    <string name="textview_race_now">进行中</string>
    <string name="textview_thistext">This is Content</string>
    <string name="textview_ym_sendtime">This is State or Send Time</string>
    <string name="textview_avgStep">平均步数</string>
    <string name="textview_ranknow">您的名次</string>
    <string name="text_share_cancel">取消</string>
    <string name="textview_share">选择要分享的内容</string>
    <string name="share_my_shuju">分享我的简报</string>
    <string name="hello_world">Hello world!</string>
    <string name="textview_help">关于</string>
    <string name="text_height">身高：</string>
    <string name="text_target_weight">体重目标：</string>
    <string name="text_input_target_weight">请在这里输入您的体重目标是多少(单位：千克)</string>
    <string name="string_birthday">生日：</string>
    <string name="string_weight">体重：</string>
    <string name="text_show_goal_inhours">预计您绕%1$s第%2$s圈还需%3$s小时，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_First_inhours">预计您绕%1$s一圈还需%2$s小时，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_indays">预计您绕%1$s第%2$s圈还需%3$s天，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_First_indays">预计您绕%1$s一圈还需%2$s天，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_inhours_huanghe">预计完成第%1$s次黄河徒步行还需%2$s小时，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_indays_huanghe">预计完成第%1$s次黄河徒步行还需%2$s天，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_First_inhours_huanghe">预计完成第一次黄河徒步行还需%1$s小时，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_First_indays_huanghe">预计完成第一次黄河徒步行还需%1$s天，加油，坚持就是胜利哟</string>
    <string name="text_show_goal_percentage">您已完成预定目标的%1$s，也可以选择下列运动目标</string>
    <string name="text_wait">努力加载中...</string>
    <string name="msg_show_club_error">您不属于企业用户，无企业相关信息</string>
    <string name="text_campaign_empty">对不起，暂时没有相应的活动!</string>
    <string name="text_addfriend_find_myself">不能添加自己为好友</string>
    <string name="ecg_today">当天</string>
    <string name="ecg_week">7天</string>
    <string name="ecg_month">近1个月</string>
    <string name="ecg_semiannual">近6个月</string>
    <string name="ecg_float_zero">0.0</string>
    <string name="ecg_int_zero">0</string>
    <string name="ecg_hr_rate">心率</string>
    <string name="ecg_my_avg">我的均值</string>
    <string name="ecg_pressure">情绪状态</string>
    <string name="ecg_variant">心率变异率</string>
    <string name="setting_paired_device">已配对设备</string>
    <string name="bracelet_setting">手环设置</string>
    <string name="bracelet_setting_pos">佩戴位置</string>
    <string name="bracelet_setting_pos_left">左手</string>
    <string name="bracelet_setting_pos_right">右手</string>
    <string name="bracelet_setting_sport">运动闹钟</string>
    <string name="bracelet_setting_sleep">睡眠闹钟</string>
    <string name="bracelet_setting_reset">睡眠闹钟重复</string>
    <string name="bracelet_setting_resetsport">运动闹钟重复</string>
    <string name="phonestep_uploadsuccess">数据同步成功</string>
    <string name="phonestep_uploadfailed">数据同步失败</string>
    <string name="phonestep_uploading">正在同步数据</string>
    <string name="dialog_area_title">提示</string>
    <string name="dialog_area_message">请到设置页面完善您的区域信息！</string>
    <string name="dialog_area_yes">现在去</string>
    <string name="dialog_area_no">稍后再说</string>
    <string name="friend_match_contact_add">确定添加</string>
    <string name="friend_match_contact_cancle">取消</string>
    <string name="friend_search">搜索</string>
    <string name="text_device_setting_empty">您目前没有任何计步设备，请到和健康完成添加。</string>
    <string name="text_device_setting_empty_alone">您目前没有任何计步设备，请先添加设备。</string>
    <string name="settingfragmentapp_nowupload">正在上传文件...</string>
    <string name="campaigncontentactivity_getmsgfalse">获取活动信息失败</string>
    <string name="campaigncontentactivity_getorderfalse">获取数据排名失败，请稍后尝试重新获取</string>
    <string name="campaigncontentactivity_noactivitydescription">抱歉，此活动暂无相关说明~</string>
    <string name="campaigncontentactivity_activitydescription">活动说明</string>
    <string name="campaigncontentactivity_awardsetting">奖项设置</string>
    <string name="campaigncontentactivity_noaward">无奖项信息</string>
    <string name="campaigncontentactivity_averagenumberofsteps">平均步数排行榜</string>
    <string name="campaigncontentactivity_noactivitydescription1">暂无活动说明</string>
    <string name="campaigncontentactivity_noaverage">参加活动的第一天，暂无您的排名数据</string>
    <string name="campaigncontentactivity_getactivelistinformationfalse">获取活动列表信息失败</string>
    <string name="firmwaredownloadprogressactivity_downloadmsg">固件下载失败</string>
    <string name="firmwaredownloadprogressactivity_downloadprogress">下载固件，当前进度</string>
    <string name="firmwareuploadprogressactivity_uploadsuccess">固件升级成功</string>
    <string name="firmwareuploadprogressactivity_uploadfalse">固件升级失败</string>
    <string name="firmwareuploadprogressactivity_connectdismiss">手环连接断开</string>
    <string name="firmwareuploadprogressactivity_nofindfloder">未找到手环固件</string>
    <string name="firmwareuploadprogressactivity_lowbuttery">手环电量过低，请先充电</string>
    <string name="firmwareuploadprogressactivity_timeout">更新手环固件超时</string>
    <string name="firmwareuploadprogressactivity_flodererror">固件文件无效</string>
    <string name="firmwareuploadprogressactivity_progressing">更新中，当前进度</string>
    <string name="firmwareuploadprogressactivity_connecttimeout">连接超时</string>
    <string name="firmwareuploadprogressactivity_connecting">正在连接设备，请稍等</string>
    <string name="firmwareuploadprogressactivity_connectfalse">连接失败</string>
    <string name="firmwareuploadprogressactivity_isnew">当前固件版本已是最新</string>
    <string name="firmwareuploadprogressactivity_device">您的Android系统版本过低，暂不支持蓝牙手环</string>
    <string name="handaddcontactactivity_title">手动添加好友</string>
    <string name="handaddcontactactivity_sendmsg">消息已发送，等待对方同意</string>
    <string name="handaddcontactactivity_sendmsgfalse">消息发送失败</string>
    <string name="handaddcontactactivity_searchfriend">搜索好友...</string>
    <string name="handaddcontactactivity_searchnofriend">未找到好友</string>
    <string name="handaddcontactactivity_searchfalse">搜索失败</string>
    <string name="handaddcontactactivity_addfriend">添加好友...</string>
    <string name="hractivity_measurement">测量于</string>
    <string name="hractivity_hearthealthisgood">心率处于健康范围，心脏健康状态良好</string>
    <string name="hractivity_riskoftachycardia">存在心动过速风险</string>
    <string name="hractivity_heartratetrend">心率趋势</string>
    <string name="hrvactivity_measurement">测量于</string>
    <string name="hrvactivity_hearthealthisgood">心率变异率反映一段时间内的心脏健康指数，平均值越高心脏越健康</string>
    <string name="hrvactivity_heartratetrend">心率变异率趋势</string>
    <string name="mainfragmentactivity_note">请先到设置页面激活运动设备！</string>
    <string name="mainfragmentactivity_back">再按一次退出程序</string>
    <string name="maplistgpsfragment_nosport">您还没有数据，赶快开启运动吧！</string>
</resources>