<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:minWidth="480dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7aaf3b"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/iv_alert_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/icon_notify_ticker" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/global_alert"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:text="请您手动上传计步器的运动数据，上传成功后切换设备，以免数据丢失。"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/global_ok"
            android:textColor="#603314"
            android:layout_marginLeft="10dp"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/global_ok"
            android:textColor="#603314"
            android:textSize="16dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/global_cancel"
            android:textColor="#603314"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>