<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/item_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/title_menu2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll_menu" >

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#EBEBEB"
            android:focusable="false" />

        <ListView
            android:id="@+id/list_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            android:dividerHeight="1dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bracelet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_step"
        android:padding="5dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/iv_image_device"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/device_bracelet"
            android:contentDescription="ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_bracelet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/setting_bracelet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_bracelet_dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/setting_bracelet_dec"
                android:textColor="@color/menu_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_bracelet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/bluetooth_more_selected"
            android:contentDescription="@null"
            android:visibility="gone" />
    </LinearLayout>
     <LinearLayout
        android:id="@+id/ll_device_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提示：" 
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_device_setting_text_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_device_setting_empty"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>